<resources>
    <string name="app_name">PlantPlaces14SS</string>
    <string name="lblGPSAPlant">GPS a Plant</string>
    <string name="Search">Search</string>
    <string name="lblDescription">description of the plant</string>
    <string name="lblSelectAPlant">Select a Plant</string>
    <string name="lblLatitude">Latitutde</string>
    <string name="blank"></string>
    <string name="alarmMessage">unableto opne Image</string>

</resources>
