<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.georg.plantplaces14ss.GPSAPlantActivity">




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/lblGPSAPlant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032"
            android:id="@+id/textView" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:onClick="searchClick"
        android:text="@string/lblSelectAPlant"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/lblDescription"/>

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_below="@+id/search"
        android:text="@string/lblLatitude" />

    <TextView
        android:id="@+id/lblLatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/txtLatitude"
        android:layout_toRightOf="@+id/txtLatitude"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/lblLongtitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLatitude"
        android:layout_alignStart="@+id/txtLatitude"
        android:layout_below="@+id/txtLatitude"
        android:layout_marginTop="17dp"
        android:text="Longtitude" />

    <TextView
        android:id="@+id/lblLongtitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblLatitudeValue"
        android:layout_alignStart="@+id/lblLatitudeValue"
        android:layout_alignTop="@+id/lblLongtitudeLabel" />
</RelativeLayout>



